# spac-unhas

./: LICENSE  README.md  master  modulesrequirement  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
examples/: directrun  directrun.ipynb  spac-unhas.ipynb
examples/data/: MIR_C_15_45.geom  MIR_C_15_45_CN01_E.sac  MIR_C_15_45_CN01_N.sac  MIR_C_15_45_CN01_Z.sac  MIR_C_15_45_CN02_E.sac  MIR_C_15_45_CN02_N.sac  MIR_C_15_45_CN02_Z.sac  MIR_C_15_45_CN03_E.sac  MIR_C_15_45_CN03_N.sac  MIR_C_15_45_CN03_Z.sac  MIR_C_15_45_CN04_E.sac  MIR_C_15_45_CN04_N.sac  MIR_C_15_45_CN04_Z.sac  MIR_C_15_45_CN06_E.sac  MIR_C_15_45_CN06_N.sac  MIR_C_15_45_CN06_Z.sac  MIR_C_15_45_CN07_E.sac  MIR_C_15_45_CN07_N.sac  MIR_C_15_45_CN07_Z.sac  MIR_C_15_45_CN08_E.sac  MIR_C_15_45_CN08_N.sac  MIR_C_15_45_CN08_Z.sac  MIR_C_15_45_CN09_E.sac  MIR_C_15_45_CN09_N.sac  MIR_C_15_45_CN09_Z.sac  MIR_C_15_45_CN10_E.sac  MIR_C_15_45_CN10_N.sac  MIR_C_15_45_CN10_Z.sac  MIR_C_15_45_CN11_E.sac  MIR_C_15_45_CN11_N.sac  MIR_C_15_45_CN11_Z.sac  MIR_C_15_45_CN12_E.sac  MIR_C_15_45_CN12_N.sac  MIR_C_15_45_CN12_Z.sac  MIR_C_15_45_CN13_E.sac  MIR_C_15_45_CN13_N.sac  MIR_C_15_45_CN13_Z.sac  MIR_C_15_45_CN14_E.sac  MIR_C_15_45_CN14_N.sac  MIR_C_15_45_CN14_Z.sac  (+6 more)
master/: makefolder.py
spacunhas/: complexcoherence.py  dispersioncurve.py  environment.py  readdata.py  spaccoefficient.py  windowing.py
src/: __init__.py  complexcoherence.py  dispersioncurve.py  readdata  readdata.py  spaccoefficient.py  windowing.py
test/data/MIR_C_135_405/: MIR_C_135_405.geom
(+1489 files in other folders)
