[project]
name = "spac-unhas_ahmadfauzy02"
version = "0.1"
authors = [
  { name="Ahmad Fauzy Arif", email="ahmadfauzyarif@gmail.com" },
]
description = "SPAC processing"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ahmadfauzy02/spac-unhas"
Issues = "https://github.com/ahmadfauzy02/spac-unhas/issues"
